# primp-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  test_server.py
src/primp_mcp/: __init__.py  server.py  server_fixed.py
